--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,13 @@
-:root {
+body {
+  margin: 0;
+  padding: 0;
+}
+a {
+  text-decoration: none;
+  color: unset;
+}
+
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
@@ -105,3 +114,4 @@ a {
     color-scheme: dark;
   }
 }
+ */
