home page, new design of login page and modal component

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,3 +1,103 @@
+.main {
+  display: flex;
+  flex-direction: column;
+}
+.banner {
+  background-color: black;
+  color: white;
+  height: 100vh;
+}
+
+.title {
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: min(20vw, 20vh);
+  font-weight: 600;
+  padding: 40px;
+  height: 50vh;
+  color: black;
+  background-image: linear-gradient(
+    to bottom right,
+    darkslategrey,
+    darkseagreen
+  );
+}
+.messageContainer {
+  display: flex;
+  padding: 40px;
+  margin-right: 15%;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 30px;
+}
+.messageText {
+  padding: 20px;
+  margin-right: 20px;
+}
+.messageButton {
+  padding: 25px;
+  border-radius: 100px;
+  font-size: 35px;
+  font-weight: 700;
+  cursor: pointer;
+  animation: changeColor 8s infinite;
+}
+.secondPage {
+  height: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: row;
+}
+
+.forImage {
+  padding-top: 40px;
+  display: flex;
+  flex-direction: column;
+  width: 45%;
+  /* background-color: darkseagreen; */
+  background-image: linear-gradient(
+    to bottom right,
+    darkseagreen,
+    darkslategrey
+  );
+  align-items: center;
+}
+.imgContainer {
+  width: auto;
+}
+.forText {
+  display: flex;
+  flex-direction: column;
+  width: 55%;
+  background-color: lightgray;
+  padding: 30px;
+}
+.forText > p {
+  padding: 5px;
+  margin: 30px;
+}
+.footer {
+  padding: 10px 50px;
+}
+
+@keyframes changeColor {
+  0% {
+    background-color: darkseagreen;
+  }
+  25% {
+    background-color: mediumseagreen;
+  }
+  50% {
+    background-color: teal;
+  }
+  75% {
+    background-color: darkcyan;
+  }
+  100% {
+    background-color: darkseagreen;
+  }
+}
 /* .main {
   display: flex;
   flex-direction: column;
